test/pass/internal/simple_storage_damage.lily
define f(a: String, b: String...)
{
     if a != "[{}]":
        stderr.print("Failed.")
}

# This test makes sure that "[{}]" is not claimed by 's.upper()' as a storage,
# causing 'HELLO' for both arguments.
var s = "hello"
f("[{}]", s.upper())
